Adição de botões para voltar de tela e melhoria na logica de abstração, criando um controlador com tarefas gerais

--- a/src/main/resources/org/ucsal/poo/pf20252/br/bancoGrafico/TelaConta.fxml
+++ b/src/main/resources/org/ucsal/poo/pf20252/br/bancoGrafico/TelaConta.fxml
@@ -26,9 +26,13 @@
             <ImageView fitHeight="24" fitWidth="24" preserveRatio="true">
                 <Image url="@images/sino.png" />
             </ImageView>
-            <ImageView fitHeight="24" fitWidth="24" preserveRatio="true">
-                <Image url="@images/menu.png" />
-            </ImageView>
+            <Button fx:id="menu" contentDisplay="CENTER" mnemonicParsing="false" onAction="#voltarInicio" styleClass="btn-voltar">
+                <graphic>
+                    <ImageView fitHeight="24" fitWidth="24" preserveRatio="true">
+                        <Image url="@images/menu.png" />
+                    </ImageView>
+                </graphic>
+            </Button>
         </HBox>
     </HBox>
 
