--- a/src/main/resources/org/ucsal/poo/pf20252/br/bancoGrafico/tela-conta.css
+++ b/src/main/resources/org/ucsal/poo/pf20252/br/bancoGrafico/tela-conta.css
@@ -113,3 +113,8 @@
     -fx-font-family: "System";
     -fx-font-size: 12px;
 }
+
+.btn-voltar{
+    -fx-cursor: hand;
+    -fx-background-color: transparent;
+}
