--- a/src/main/resources/org/ucsal/poo/pf20252/br/bancoGrafico/tela-operacao.css
+++ b/src/main/resources/org/ucsal/poo/pf20252/br/bancoGrafico/tela-operacao.css
@@ -153,3 +153,8 @@
 .btn-confirmar:pressed {
     -fx-background-color: #555;
 }
+
+.btn-voltar{
+    -fx-cursor: hand;
+    -fx-background-color: transparent;
+}
